feat(java26): restore all Java 26 APIs — Gatherer, StructuredTaskScope.open(), ScopedValue
- pom.xml: maven.compiler.release 21 → 26
- CI: GitHub Actions java-version 25 → 26
- GathererPatterns: replace Java 21 workarounds with native Gatherer/Gatherers API
  (windowFixed, windowSliding, scan, fold, mapConcurrent, Gatherer.ofSequential)
- StructuredTaskScopePatterns: replace ShutdownOnFailure/ShutdownOnSuccess constructors
  with StructuredTaskScope.open(Joiner.awaitAllSuccessfulOrThrow/anySuccessfulResultOrThrow)
- Parallel: same STS API update; remove @SuppressWarnings("preview")
- ScopedValuePatterns: pattern 5 updated to open(Joiner) API; remove @SuppressWarnings("preview")
- Tests: deduplicateConsecutive() call sites updated to stream.gather(GathererPatterns.deduplicateConsecutive()).toList()
- .mvn/mvnd.properties: update java.home path to GraalVM CE 26
- README: Java 25 → Java 26 throughout

https://claude.ai/code/session_016ftt4XiVaVYqHE25oLCpLp